# TestCGAL

./: CMakeLists.txt  README.md  segmentation_example.cpp
